--- a/main.html
+++ b/main.html
@@ -7,6 +7,29 @@
 </head>
 
 <body>
+	<nav>
+		<ui>
+			<li><a href="">Home</a></li>
+			<li><a href="">About us</a></li>
+			<li><a href="">Contact us</a></li>
+		</ui>
+	</nav>
+	<h1>3 random videos</h1>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4
+">
+	</video>
+
+		<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4
+
+">
+	</video>
+
+		<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4
+">
+	</video>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
